--- a/templates/register.html
+++ b/templates/register.html
@@ -1,32 +1,30 @@
-
 {% extends 'base.html' %}
 
 {% block title %}Inscription - Pterodactyl Manager{% endblock %}
 
 {% block content %}
+<section class="container">
+    <header>
+        <h1>Créer un compte</h1>
+    </header>
 
-<h1>Créer un compte</h1>
+    <form method="POST">
+        <fieldset>
+            <label for="username">Nom d'utilisateur</label>
+            <input type="text" id="username" name="username" required>
 
-<form method="POST">
-    <p>
-        <label>Nom d'utilisateur:</label><br>
-        <input type="text" name="username" required>
-    </p>
-    
-    <p>
-        <label>Email:</label><br>
-        <input type="email" name="email" required>
-    </p>
-    
-    <p>
-        <label>Mot de passe:</label><br>
-        <input type="password" name="password" required>
-    </p>
-    
-    <p>
-        <input type="submit" value="Créer le compte">
-    </p>
-</form>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
 
-<p><a href="{{ url_for('index') }}">Retour à l'accueil</a></p>
+            <label for="password">Mot de passe</label>
+            <input type="password" id="password" name="password" required>
+
+            <input type="submit" value="Créer le compte">
+        </fieldset>
+    </form>
+
+    <footer>
+        <p><a href="{{ url_for('index') }}">← Retour à l'accueil</a></p>
+    </footer>
+</section>
 {% endblock %}
