Affichage de l'historique de l'utilisateur dans les paramètres de son compte

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
             width: 60px;
             height: 60px;
         }
-        
+
         :root {
             --pico-font-size: 100%; /* Ajuste la taille de la police de base si nécessaire */
         }
@@ -96,7 +96,7 @@
                         <ul dir="rtl">
                         <li><a href="#">Profil</a></li>
                         <li><a href="#">Paramètres</a></li>
-                        <li><a href="#">Historique</a></li>
+                        <li><a href="/account/history">Historique</a></li>
                         <li><a href="{{ url_for('logout') }}">Se déconnecter</a></li>
                         </ul>
                     </details>
